--- a/BACK-END/Pipfile
+++ b/BACK-END/Pipfile
@@ -4,7 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+sqlalchemy = "*"
 flask = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
 
 [dev-packages]
 
