google auth added

--- a/BACK-END/Pipfile
+++ b/BACK-END/Pipfile
@@ -5,9 +5,11 @@ name = "pypi"
 
 [packages]
 sqlalchemy = "*"
-flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
+flask = "*"
+flask-cors = "*"
+google-auth = "*"
 
 [dev-packages]
 
