--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.11",
+    "antd": "^5.26.5",
     "axios": "^1.10.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
