--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,13 +15,17 @@
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.26.5",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.0",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11"
   },
